fix mayo 2021
Se realiza areglos de bean nombres absolutos ya que presentaban mal el
nombre con el codigo anterior.
Se crea implementacion para llammar metodo postLoad desde el fxml al
llamar una clase.
Se ajusta para poder llamar el mnemonic o short cur desde aalgunas
partes, presenta error al llamar el botón de login.
Se ajusta logout para mostrar el login y poder volver a realizar login,
pero queda el shortcut pegado sin poderlo desactivar del template.
Se agrega al menu el shortcut para ejecutar los la ubicacion de la
acción.
Se ajusta implementacion de shortcut sobre los botones dinámicos.
Se ajusta la implementación de IComunicaciones porque tenía una lista
inmodificable y generaba error por esto.
Se realizá implementación para modo dev para que con el usuario
ingresado y cualquier clave pueda ingresar.